@@ -38,6 +38,8 @@
 <p>2020-01-18  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/pixel_cache.c (DestroyThreadViewSet): Check if views
+pointer is not null before destroying views.</li>
 <li>coders/xpm.c (ReadXPMImage): Properly detect the case where the
 XPM colormap is not fully initialized.</li>
 <li>coders/pict.c (DecodeImage): Fix heap buffer over-reads. Fixes
